Restore working config: Use @gradio/client instead of manual HTTP/SSE (version that worked)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@gradio/client": "^0.16.0"
+  },
   "scripts": {
     "test": "node test_system_b.js"
   }
