--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Local Netlify folder
 .netlify
 
-# Garbage - fichiers obsolètes à ne jamais push
+# Garbage - fichiers obsolètes à ne JAMAIS push (RÈGLE ABSOLUE)
 garbage/
